istio/destination-rule-all.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: swagger
spec:
  hosts:
  - '*'
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cars
spec:
  host: cars
  subsets:
  - name: v1
    labels:
      version: v1
---
