istio/smartcar-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: smartcar-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "flask.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smartcar
spec:
  hosts:
  - "flask.example.com"
  gateways:
  - smartcar-gateway
  http:
  - match:
    - uri:
        exact: /swagger.json
    - uri:
        prefix: /cars
    route:
    - destination:
        port:
          number: 5000
